@@ -1,19 +1,22 @@
 ;
 ;	tests/test_n27.etc
 ;	compiled from tests/test_n27.occ
-;	on host tadpole at Mon Oct 17 01:48:31 2005
+;	on host tadpole at Mon Oct 17 21:48:33 2005
 ;	source language: occam-pi, target: etc-kroc-unknown
 ;
 
 .jentry	O_test_n27
 .descriptor	"PROC O_test_n27 (CHAN! BYTE scr)"
-; PROC test.n27 = 8,8,0,0,8
-.setws	8, 8
+; PROC test.n27 = 32,8,0,0,8
+.setws	32, 8
 .setvs	0
 .setms	0
 .setnamedlabel	"O_test_n27"
 .setlabel	1
 	ajw	0
+	ldl	4
+	stl	-4
+	call	O_test_n26, 8
 	ajw	0
 	ret	8
 
